[package]
name = "intel_ma"
version = "0.2.1"
edition = "2024"
description = "Intel: Management Absent - inspect and deblob Intel ME/TXE/CSME and AMD PSP management firmware"
license = "GPL-3.0-or-later"
repository = "https://github.com/seuros/intel_ma"
readme = "README.md"
keywords = ["intel-me", "firmware", "coreboot", "me-cleaner", "psp"]
categories = ["command-line-utilities", "hardware-support"]

# Keep the cloned reference crates out of our build/lint scope.
[workspace]
exclude = ["reference"]

[lib]
name = "intel_ma"
path = "src/lib.rs"

[[bin]]
name = "intel_ma"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
efi-compress = "0.2.0"
thiserror = "2"
num-bigint = "0.4"
sha2 = "0.10"
md-5 = "0.10"
